# CG

./: .gitignore
Blatt 1/: CMakeLists.txt  Computergrafik_Blatt01.tex
Blatt 1/aufgaben_blatt_01/: CMakeLists.txt
Blatt 1/aufgaben_blatt_01/aufgabe_1/: CMakeLists.txt
Blatt 1/aufgaben_blatt_01/aufgabe_1/code/: 01_simple_functions.cpp
Blatt 1/aufgaben_blatt_01/aufgabe_2/: CMakeLists.txt
Blatt 1/aufgaben_blatt_01/aufgabe_2/code/: 01_stl.cpp  01_stl.h  LineStrip3D.cpp  LineStrip3D.hpp  Point3D.hpp
Blatt 1/aufgaben_blatt_01/aufgabe_3/: CMakeLists.txt
Blatt 1/aufgaben_blatt_01/aufgabe_3/code/: 01_raii.cpp  MatrixInt.cpp  MatrixInt.hpp
Blatt 1/aufgaben_blatt_01/aufgabe_4/: CMakeLists.txt
Blatt 1/aufgaben_blatt_01/aufgabe_4/code/: 01_functions.cpp  Definition.cpp  Definition.hpp  source1.cpp  source1.hpp  source2.cpp  source2.hpp
Blatt 2/: CG_02_Peresunchak_Reng_Tsigos.tex  Computergrafik_Blatt02.tex
Blatt 2/aufgaben_blatt_02/code/: CMakeLists.txt  ColorSpaces.cpp  ColorSpaces.hpp  Image.hpp  ImageBase.cpp  ImageBase.hpp  ImageConverter.cpp  ImageConverter.hpp  ImageIO.cpp  ImageIO.hpp  ImageManipulation.cpp  ImageManipulation.hpp  ImageTraits.hpp
Blatt 2/aufgaben_blatt_02/images/: ginkgo.ppm  ginkgoBWscale.pbm  ginkgoGreyscale.pgm  ginkgoHSVscale.ppm  ginkgoROTATIONscale.ppm  image_source.txt
Blatt 3/: Computergrafik_Blatt03.tex
Blatt 4/: CG_04_Peresunchak_Reng_Tsigos.tex
Blatt 5/: Computergrafik_Blatt05.tex
Blatt 6/: CG_06_Peresunchak_Reng_Tsigos.tex
